[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "timeline"
version = "0.1.5"
authors = [
  { name="Johnny Kjeldbjerg", email="jk@tekstkonsulent.dk" },
]
description = "Implements a timeline"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jkjeldbjerg/timeline.git"
"Bug Tracker" = "https://github.com/jkjeldbjerg/timeline/issues"
